# simulator-oltp-datalake

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_connection.py
config/: .env.example  settings.toml
connectors/: connector-oltp.json
consumers/raw/: Dockerfile  consumer_universal.py  requirements.txt
databricks/pipeline_simulador_oltp_hospital/transformacoes/: raw_to_bronze.sql
scripts/: cli.py  data_gen.py  db_init.py  reset.py  seed.py  start_stream.sh  stream.py  test_s3.py  validators.py
sql/: 01_schema.sql  02_indexes.sql  03_seed-lookups.sql  99_drop_all.sql
